correct centerline position; closes #93
was from putting centerline in middle even if correlation points range is not symmetric


Former-commit-id: 6e657e6f7cd04a48f330d9857562ed199057b94d
Former-commit-id: 3df0759812ac33206726355ed94403fb8745c7bb
Former-commit-id: f561ad76a8bb7964dcb02271fbc5553523ffa652

--- a/inst/app/www/drugs.css
+++ b/inst/app/www/drugs.css
@@ -49,3 +49,11 @@ td.sim-cell {
   fill: red; 
   stroke: #443;
 }
+
+.simplot line.centerline {
+  stroke: rgb(221, 221, 221); 
+  shape-rendering: crispEdges; 
+  stroke-width: 1px; 
+  stroke-dasharray: 3, 3;
+
+}
