add mean line when sorting by average; closes #96
Former-commit-id: d17e0e2ef12a60c6f221f5efc610aacc0812884a
Former-commit-id: b24c228d2df864640c60505cc7156a8e25966181
Former-commit-id: 64efd61e33056d04c09ed0002e523772133d1c24

--- a/inst/app/www/drugs.css
+++ b/inst/app/www/drugs.css
@@ -55,5 +55,10 @@ td.sim-cell {
   shape-rendering: crispEdges; 
   stroke-width: 1px; 
   stroke-dasharray: 3, 3;
+}
 
+.simplot.show-meanline line.meanline {
+  stroke-width: 1px;
+  stroke: dodgerblue; 
+  shape-rendering: crispEdges;
 }
