init Pathways tab
Former-commit-id: eeb1dc6f7a5384b335df2b2ddfd4d2d3c4d6f1a0
Former-commit-id: b52b9fc4273276ebc960fb4772bbb6121b77547d
Former-commit-id: 084d6f72d457e6a729f040f6fa71b4f487588005

--- a/inst/app/www/drugs.css
+++ b/inst/app/www/drugs.css
@@ -53,7 +53,8 @@ td.sim-cell {
   stroke-dasharray: 3, 3;
 }
 
-.simplot.show-meanline line.meanline {
+.simplot.show-meanline line.meanline,
+.simplot:hover line.meanline {
   stroke-width: 1px;
   stroke: dodgerblue; 
   shape-rendering: crispEdges;
