right click menu works for 'load as query' #120
Former-commit-id: d44cec9841df2ea5d538c86d7db9dcf756c41364
Former-commit-id: 17ca4bdde45a5d1138d3a3cb3caa5d5eae627ab9
Former-commit-id: 50d38b1ba183833d5b01f51ff0bfcdd0621efd20

--- a/inst/app/www/drugs.css
+++ b/inst/app/www/drugs.css
@@ -59,3 +59,35 @@ td.sim-cell {
   stroke: dodgerblue; 
   shape-rendering: crispEdges;
 }
+
+
+/* custom menu stuff */
+
+.custom-menu {
+  display: none;
+  z-index: 1000;
+  position: absolute;
+  overflow: hidden;
+  border: 1px solid #CCC;
+  white-space: nowrap;
+  font-family: sans-serif;
+  background: #FFF;
+  color: #333;
+  list-style: none;
+  padding:0;
+  margin: 0;
+}
+
+.custom-menu li {
+  padding: 8px 12px;
+  cursor: pointer;
+}
+
+.custom-menu li:hover {
+  background-color: #DEF;
+}
+
+input {
+  display: none;
+}
+
