show signature name in right-click menu for correlation points
Former-commit-id: 8b05ff1fdf2051853287202449d4ff173d0fdb96
Former-commit-id: 3ef60271f810ec2a9af0ec0282d7753f67ff0e3e
Former-commit-id: 37eed430e81e68d1044dee3741c5b97534c3e007

--- a/inst/app/www/drugs.css
+++ b/inst/app/www/drugs.css
@@ -37,11 +37,14 @@ td.sim-cell {
   cursor: crosshair;
 }
 
-.cor-point:hover text.x {
+.cor-point:hover text.x,
+.cor-point.clicked text.x {
   fill: #443;
 }
 
-.cor-point:hover circle {
+.cor-point:hover circle,
+.cor-point.clicked circle
+ {
   fill: red; 
   stroke: #443;
 }
