add rank to drugs table for #95
Former-commit-id: 16a2c09c8478b019bfed68afe2237b691ba32dab
Former-commit-id: b058389afde2bc9430c1490b76aeb427db3f2fd8
Former-commit-id: c8a23435c1ed0e900d73cecdf06ccb32b12c7caf

--- a/inst/app/www/drugs.css
+++ b/inst/app/www/drugs.css
@@ -90,6 +90,19 @@ td.sim-cell {
   background-color: #DEF;
 }
 
+/* Rank labels */
+.rank-label {
+  border: 1px solid #ddd;
+  color: #54575a;
+  border-radius: 0;
+  font-weight: 400;
+  background-color: #fff;
+}
+
+td.dt-rank {
+  padding: 0 !important;
+  text-align: center;
+}
 
 /* column visibility buttons consistent with btn-default */
 
