--- a/inst/app/www/drugs.css
+++ b/inst/app/www/drugs.css
@@ -106,7 +106,7 @@ td.dt-rank {
 
 /* column visibility buttons consistent with btn-default */
 
-a.dt-button {
+button.dt-button {
   display: inline-block;
   padding: 6px 12px;
   margin-bottom: 0;
@@ -132,17 +132,19 @@ a.dt-button {
 }
 
 
-a.dt-button:active,
-a.dt-button:hover {
+button.dt-button:active:not(.disabled),
+button.dt-button:hover:not(.disabled) {
   color: #333 !important;
   background-color: #e6e6e6 !important;
   border-color: #adadad !important;
+  background-image: none !important;
 }
 
-a.dt-button:focus {
+button.dt-button:focus:not(.disabled) {
   color: #333;
   background-color: #d4d4d4 !important;
   border-color: #8c8c8c !important;
+  background-image: none !important;
 }
 
 /* search box styling consistent with form-control */
